<resources>
    <string name="app_name">Mackirel </string>
    <string name="signin">Sign in </string>
    <string name="signup">Sign up </string>
    <string name="login">Log IN </string>
    <string name="explore">Explore </string>
    <string name="login_wechat">Log IN by Wechat</string>
    <string name="email">Email </string>
    <string name="invalid_email">Invalid Email </string>
    <string name="password">Password </string>
    <string name="forgot_password">Forgot Password </string>
    <string name="have_not_account">Don\'t have an account </string>
    <string name="have_account">Have an account? </string>
    <string name="welcome">Welcome </string>
    <string name="first_name">First Name </string>
    <string name="last_name">Last Name </string>
    <string name="featured_list">Hot Deals</string>
    <string name="my_featured_list">My featured list</string>
    <string name="latest_list">New Arrivals</string>
    <string name="product_list">Product list</string>
    <string name="no_product">No Product</string>
    <string name="no_wish_list">No Wishlist</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="enter_recovery_mail">Enter your mail ID for recovery</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="reset_password">Rest password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send">Send</string>
    <string name="note_enter_otp">Note: Please enter the otp send to your registered email address.</string>
    <string name="total_price">Total Price</string>
    <string name="checkout">Check out</string>
    <string name="post_new_product">Post New Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="internet_error">Internet Error</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="message_exit">Are you sure you want to exit?</string>
    <string name="message_press_again_exit">Press again to exit</string>
    <string name="message_verify_failed">Verification Failed</string>
    <string name="message_not_match">Not match</string>
    <string name="message_at_least_cha">At least 6 characters</string>
    <string name="message_password_update">Password updated</string>
    <string name="message_no_product_into_cart">No product into cart</string>
    <string name="message_cant_order">You can\'t order. Please login.</string>
    <string name="message_input_shipping_price">Please input shipping price</string>
    <string name="message_select_category">Please select category</string>
    <string name="message_select_currency">Please select currency</string>
    <string name="message_select_week">Please select week</string>
    <string name="message_explanation_needed">Explanation Needed</string>
    <string name="message_cancel_book">Are you sure you want to cancel this book?</string>
    <string name="message_delete_product">Are you sure you want to delete this product?</string>
    <string name="message_added_product_into_cart">Added the product to cart successfully</string>
    <string name="message_added_product_into_cart_already">Added the product to cart already</string>
    <string name="message_failed_get_address">Failed To Get Address. Please Try Again</string>
    <string name="message_login_to_bid_offer">Please login to bid your offer</string>
    <string name="message_confirm_cancel_auction_title">Confirm cancel auction</string>
    <string name="message_cancel_auction">Are you sure you want to cancel the auction?</string>
    <string name="message_confirm_auction">Are you sure you want to confirm this auction?</string>
    <string name="message_copied">Copied successfully</string>
    <string name="message_copy_text">Copy Text</string>
    <string name="here_is_max">Here is max</string>
    <string name="message_cancel_order">Are you sure you want to cancel this order?</string>
    <string name="message_confirm_order">Are you sure you want to confirm this order?</string>
    <string name="message_cancel_paypal">Are you sure you want to confirm this order?</string>
    <string name="message_select_payment_option">Please select payment option.</string>
    <string name="message_cannot_post">You cannot post right now. Please log in to the app.</string>
    <string name="message_logout">Are you sure you want to log out?</string>
    <string name="loading">Loading...</string>
    <string name="title">Title</string>
    <string name="upload">Upload</string>
    <string name="import_image_count">You can import 4 images</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="select_currency">Select currency</string>
    <string name="count">Count</string>
    <string name="address">Address</string>
    <string name="select_delivery_method">Select Delivery Method</string>
    <string name="local_pickup">Local PickUp</string>
    <string name="shipping">Shipping</string>
    <string name="shipping_fee">Shipping fee: 0.0</string>
    <string name="add_into_feature_product">Add into feature product(optional)</string>
    <string name="feature_1_day">$.8 / 1 day</string>
    <string name="feature_3_day">$2.5 / 3 days</string>
    <string name="feature_1_week">$5 / 1 week</string>
    <string name="post">Post</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="phone">Phone</string>
    <string name="street_address">Street Address</string>
    <string name="apt_suit">Apt/suit</string>
    <string name="city_state_country">City</string>
    <string name="zip_postalcode">Zip/PostalCode</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="routing_number">Routing Number</string>
    <string name="my_auction">My Auction</string>
    <string name="auction">Auction</string>
    <string name="auction_detail">Auction Detail</string>
    <string name="edit_auction">Edit Auction</string>
    <string name="cancel_auction">Cancel Auction</string>
    <string name="no_auction">No Auction</string>
    <string name="add_new_auction">Add new auction</string>
    <string name="start_price">Start Price</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="you_winning">You Winning</string>
    <string name="category">Category</string>
    <string name="status">Status</string>
    <string name="current_bid_price">CURRENT BID PRICE</string>
    <string name="input_bid_price">Input Bid Price...</string>
    <string name="bid">Bid</string>
    <string name="you">You</string>
    <string name="bidders">Bidders</string>
    <string name="bid_price">Bid Price</string>
    <string name="winner">Winner</string>
    <string name="confirm">Confirm</string>
    <string name="view_winner_shipping_address">View winner shipping address</string>
    <string name="coin_deposit">Coin Deposit</string>
    <string name="wallet_balance">Wallet balance</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="copy">Copy</string>
    <string name="deposit">Deposit</string>
    <string name="only">Only</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="get_direction">Get Direction</string>
    <string name="ships_for">Ship for</string>
    <string name="ships_to">Ship to:</string>
    <string name="ships_method">Ship method:</string>
    <string name="related_products">Related Products</string>
    <string name="quantity">Quantity</string>
    <string name="subtotal">Subtotal</string>
    <string name="chat">Chat</string>
    <string name="no_chat">No Chat</string>
    <string name="count_products">No.Products</string>
    <string name="kind">Kind</string>
    <string name="date">Date</string>
    <string name="no_order">No Order</string>
    <string name="my_order">My Order</string>
    <string name="method">Method</string>
    <string name="invalidate_card">Invalidate Card</string>
    <string name="invalidate_expiry">Invalidate Expiry</string>
    <string name="invalidate_cvc">Invalidate CVC</string>
    <string name="add_card">Add CARD</string>
    <string name="no_card">No CARD</string>
    <string name="balance">Balance</string>
    <string name="cards">Cards</string>
    <string name="payment">Payment</string>
    <string name="add_shipping_address">Add Shipping Address</string>
    <string name="save_shipping_address">Save Shipping Address</string>
    <string name="contact_name">Full Name</string>
    <string name="set_as_default">Set as default</string>
    <string name="invoice">Invoice</string>
    <string name="tax">Tax</string>
    <string name="wallet">Wallet</string>
    <string name="no_history">No History</string>
    <string name="or_distance">or Distance (mile)</string>
    <string name="input_city">Input city</string>
    <string name="search">Search</string>
    <string name="amount_to_cashout">Amount to cashout</string>
    <string name="cashout_to_bank">Cashout to bank</string>
    <string name="cashout_to_paypal">Cashout to Paypal</string>
    <string name="view_profile">View profile</string>
    <string name="shop_locally">Shop individual</string>
    <string name="shop_ali">Shop locally</string>
    <string name="shop_wholesale">Shop wholesale</string>
    <string name="categories">Categories</string>
    <string name="shop_auction_sales">Shop auction sales</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit_cryptos">Deposit cryptos</string>
    <string name="my_orders">My orders</string>
    <string name="my_lists">My lists</string>
    <string name="my_auctions">My auctions</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="logout">Log out</string>
    <string name="win">Win</string>
    <string name="my_cart">My cart</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>
    <string name="order_history">Order History</string>
    <string name="withdraw_history">Withdraw History</string>
    <string name="chat_list">Chat list</string>
    <string name="home">Home</string>
    <string name="wish_list">Wishlist</string>
    <string name="sell">Sell</string>
    <string name="order_now">Order Now</string>
    <string name="make_offer">Make Offer</string>
    <string name="wechat_app_id">677054746152369</string>
    <string name="facebook_app_id">677054746152369</string>
    <string name="fb_login_protocol_scheme">fb677054746152369</string>
    <string name="access_token">AIzaSyCnCBo4qiU3PuiLNvNstl8GadA4-E__NqA</string>
    <string name="Admob_app_id">Enter the admob app id here </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="_0">0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fullscreen_view">activity_fullscreen_view</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="mainSection">mainSection</string>
    <string name="generalSection">generalSection</string>
    <string name="appShare">appShare</string>
    <string name="appRating">appRating</string>
</resources>