<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/bg_cardview"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="visible">

        <EditText
            android:id="@+id/postTitleET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/title"
            android:padding="10dp"
            android:background="@drawable/imageview_border"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/postDescriptionET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buton_border"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:padding="7dp"
            android:lines="6"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:scrollHorizontally="false"
            android:hint="@string/description"
             />

        <Spinner
            android:id="@+id/cat_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:ems="10"
            />

        <View android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="5dp"
            android:background="@color/colorDivider"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvAmenties"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:text="Select Amenties"/>

            <View android:layout_height="3dp"
                android:layout_width="match_parent"
                android:background="@color/bg_gray"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/postPriceET"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="5dp"
                android:layout_gravity="center_vertical"
                android:inputType="numberDecimal"
                android:background="@drawable/imageview_border"
                android:ems="10"
                android:hint="@string/price"
                />
            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_currency"
                    android:visibility="visible"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:orientation="horizontal"
                    android:background="@drawable/border_red_dark">
                    <Spinner
                        android:id="@+id/spin_currency"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:spinnerMode="dropdown"
                        android:dropDownSelector="@drawable/ic_arrow_drop_down_black_24dp"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/postQtyET"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="5dp"
                android:layout_gravity="center_vertical"
                android:inputType="numberSigned"
                android:background="@drawable/imageview_border"
                android:ems="10"
                android:hint="@string/count"
                />
        </LinearLayout>
        <AutoCompleteTextView
            android:id="@+id/location_autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="City/State/Country"
            android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
            android:maxLines="1"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"/>

        <AutoCompleteTextView
            android:id="@+id/address_autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
            android:hint=""
            android:visibility="gone"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/placeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Address"
            android:visibility="gone"
            android:editable="false"/>

        <LinearLayout
            android:id="@+id/mapViewONOFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/googleMapLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">


                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    class="com.brian.market.helper.WorkaroundMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="220dp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/latlongLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:baselineAligned="false"
                android:visibility="gone"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/latET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Latitude"
                        android:maxLines="1"
                        android:focusable="false"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/longET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:maxLines="1"
                        android:hint="Longtitude"
                        android:focusable="false"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/featureAdChkBox"
                    android:drawableStart="@drawable/ic_info_outline_black_24dp"
                    android:drawablePadding="10dp"
                    android:padding="10dp"

                    android:text="@string/select_delivery_method"
                    android:textColor="@color/white" />
            </LinearLayout>
            <RadioGroup
                android:id="@+id/rdg_shipping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rdb_shipping_local"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:text="@string/local_pickup"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/rdb_shipping"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/shipping"/>

            </RadioGroup>
            <EditText
                android:id="@+id/shipping_price_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:visibility="gone"
                android:hint="@string/shipping_fee"/>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/featureAdLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:visibility="visible">

            <TextView
                android:id="@+id/featureAdTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/featureAdChkBox"
                android:drawableStart="@drawable/ic_info_outline_black_24dp"
                android:drawablePadding="10dp"
                android:text="@string/add_into_feature_product"
                android:textColor="@color/white" />

            <CheckBox
                android:id="@+id/featureAdChkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingStart="10dp"
                android:paddingTop="6dp"
                android:paddingEnd="10dp"
                android:paddingBottom="6dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/featureAdByPackages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingStart="10dp"
                android:paddingTop="6dp"
                android:paddingEnd="10dp"
                android:paddingBottom="6dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:visibility="visible" />
        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioGroup
                android:id="@+id/rdg_featured"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rdb_featured_1"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/feature_1_day"/>
                <RadioButton
                    android:id="@+id/rdb_featured_2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:text="@string/feature_3_day"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/rdb_featured_3"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:text="@string/feature_1_week"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:padding="5dp"
                android:src="@drawable/ic_arrow_back_black_24dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/postAd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/loginbutton_fb"
                android:paddingStart="25dp"
                android:paddingTop="10dp"
                android:paddingEnd="25dp"
                android:paddingBottom="10dp"
                android:text="@string/post"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
